Fix generation of Java module command line arguments